--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,6 @@
 Markdown for Reproducible Research - Assignment 1
 =================================================
-
+ 
 This markdown is for the assignment 1 for the Course Reproducible Research as part of Data Science
 
 Loading and preprocessing the data
@@ -63,7 +63,7 @@ zid <- cbind(zid,rownames(zid))
 zid[order(zid$"zi",decreasing=TRUE),][1,2]
 ```
 
-Imputing missing values
+Inputing missing values
 -----------------------
 
 Pre-processing for missing values
